--- a/color-pal/package.json
+++ b/color-pal/package.json
@@ -11,8 +11,10 @@
     "chroma-js": "^2.1.0",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
+    "react-material-ui-form-validator": "^2.0.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
